feat: migrate routing and tenant scoped management